@@ -2,6 +2,7 @@ package com.tcc.consultas.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
@@ -9,6 +10,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -19,14 +21,23 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(csrf -> csrf.disable())
-                .cors(withDefaults())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
+
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+
                         .requestMatchers("/pacientes/**").permitAll()
                         .requestMatchers("/psicologos/**").permitAll()
                         .requestMatchers("/consultas/**").permitAll()
                         .requestMatchers("/teste-email").permitAll()
-                        .requestMatchers("/usuario-admin/**").permitAll() // <-- corrigido para liberar tudo
+                        .requestMatchers("/usuario-admin/**").permitAll()
+                        .requestMatchers("/error").permitAll()
+
+
                         .requestMatchers("/auth/change-password").authenticated()
+
+
                         .anyRequest().permitAll()
                 )
                 .httpBasic(withDefaults());
@@ -37,15 +48,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(
-                "http://127.0.0.1:5500",
-                "http://127.0.0.1:5501",
+
+
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "http://127.0.0.1:5173",
                 "http://localhost:5500",
-                "http://localhost:5501"
+                "http://127.0.0.1:5500",
+                "http://localhost:5501",
+                "http://127.0.0.1:5501",
+
+                "http://192.168.3.8:5500",
+                "http://192.168.3.8:5173"
         ));
+
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         config.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization", "Accept"));
         config.setAllowCredentials(true);
+
+
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
